# todoist-to-markdown

./: .copier-answers.yml  .envrc  .ipython_history  CHANGELOG.md  Justfile  README.md  pyproject.toml
.cursor/rules/: fastapi.mdc  general.mdc  pytest-integration.mdc  python.mdc  react-router-client-loader.mdc  react-router.mdc  react.mdc  shell.mdc  typescript.mdc
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  react-router.instructions.md  react.instructions.md  shell.instructions.md  typescript.instructions.md
.github/workflows/: build_and_publish.yml  build_and_publish_release_please.yml  build_and_publish_release_please_test_matrix.yml  build_and_publish_test_matrix.yml
tests/: test_import.py  test_todoist_to_markdown.py  test_todoist_to_md.py
todoist_to_markdown/: __init__.py
todoist_to_md/: __init__.py
