[project]
name = "todoist-to-markdown"
version = "0.1.1"
description = ""
keywords = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "todoist-api-python",
    "click",
    "whenever",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/todoist-to-markdown" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
todoist-to-markdown = "todoist_to_markdown:main"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3"]
