[project]
name = "todoist-to-markdown"
version = "0.1.1"
description = "Convert a Todoist task (and its comments) to a clean, readable markdown format from the command line."
keywords = [
    "todoist",
    "markdown",
    "cli",
    "export",
    "tasks",
    "comments",
    "productivity",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["todoist-api-python", "click", "whenever"]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/todoist-to-markdown" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
todoist-to-markdown = "todoist_to_markdown:main"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["todoist_to_markdown"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
